--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ body {
 
 
 /* ––––––––––––––––––– */
-/* Animation from animista.net */
+/* Animations from animista.net */
 /* ––––––––––––––––––– */
 
 .fold-open {
@@ -107,9 +107,9 @@ body {
 	animation: scale-up-hor-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
-.slide-top {
-	-webkit-animation: slide-top 0.4s ease-in both;
-	animation: slide-top 0.4s ease-in both;
+.scale-up-center {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
 @-webkit-keyframes scale-up-hor-center {
@@ -133,25 +133,23 @@ body {
 	}
 }
 
-@-webkit-keyframes slide-top {
+@-webkit-keyframes scale-up-center {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   100% {
-    -webkit-transform: translateY(-100px);
-            transform: translateY(-100px);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
-@keyframes slide-top {
+@keyframes scale-up-center {
   0% {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    -webkit-transform: scale(0.5);
+            transform: scale(0.5);
   }
   100% {
-    -webkit-transform: translateY(-100px);
-            transform: translateY(-100px);
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
-
-
