--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /* ––––––––––––––––––– */
-/* Open Sans from Google Fonts */
+/* Open Sans and Source Code Pro from Google Fonts */
 /* ––––––––––––––––––– */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@500&display=swap');
 
 /* ––––––––––––––––––– */
 /* W3.CSS slide in animation */
@@ -20,19 +21,19 @@
 	--discord-gray: #36393e;
 }
 
-html,
-body {
-	margin: 0;
-  	padding: 0;
-}
 
 body {
 	font-family: 'Open Sans', sans-serif;
-	height: 100vh;
-	width: 100vw;
 	text-align: left;
 	position: static;
 	background-color: var(--discord-gray)
+}
+
+code {
+	background-color: #23272A;
+	font-family: "Source Code Pro", monospace;
+	border-radius: 8px;
+	padding: 3px 5px;
 }
 
 .gradient {
@@ -48,7 +49,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100%;
+	height: 95%;
 	width: 100%;
 	text-align: center;
 }
@@ -63,15 +64,117 @@ body {
 
 .main {
 	background-color: var(--discord-gray);
-	color: #fff
+	color: var(--text-color);
+	margin-left: 150px;
+	margin-right: 150px;
 }
 
+.main h1 {
+	margin-left: 5px;
+}
+
+.mobile .main {
+	margin-left: 0;
+	margin-right: 0;
+}
+
+/* ––– */
+
+.left img {
+	float: left; 
+	margin-right: 10px;
+}
+
+.mobile .left img {
+	float: none;
+	margin-left: none;
+}
+
+.left h1 {
+	text-align: left; 
+	margin-bottom: 0;
+}
+
+.mobile .left h1 {
+	text-align: center;
+}
+
+.left p {
+	vertical-align: top;
+}
+
+/* ––– */
+
+.right img {
+	float: right; 
+	margin-right: 10px;
+}
+
+.mobile .right img {
+	float: none;
+	margin-left: none;
+}
+
+.right h1 {
+	text-align: right; 
+	margin-bottom: 0;
+}
+
+.mobile .right h1 {
+	text-align: center;
+}
+
+.right p {
+	vertical-align: top;
+}
+
+
+/* ––– */
+
+.gradient-text {
+	background: var(--magenta);
+	background: -moz-linear-gradient(150deg, var(--magenta) 0%, var(--blue) 100%);
+	background: -webkit-linear-gradient(150deg, var(--magenta) 0%, var(--blue) 100%);
+	background: linear-gradient(150deg, var(--magenta) 0%, var(--blue) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ed47ff",endColorstr="#70d7ff",GradientType=1);
+	-webkit-background-clip: text;
+	background-clip: text;
+  	-webkit-text-fill-color: transparent;
+}
+
+a.gradient-text:hover {
+	text-decoration: underline;
+}
+
+.blurple-text {
+	color: var(--blurple)
+}
+
+a.blurple-text {
+	text-decoration: none;
+}
+
+a.blurple-text:hover {
+	text-decoration: underline;
+}
+
+img {
+	border-radius: 10px;
+}
+
+.mobile img {
+	width: 275px;
+	height: 125px;
+}
 
 /* ––––––––––––––––––– */
 /* Buttons             */
 /* ––––––––––––––––––– */
-* {
-	box-sizing: border-box;
+
+.mobile .invite-wrapper {
+	display:flex;
+	justify-content:center;
+	align-items:center
 }
 
 .invite {
@@ -79,15 +182,15 @@ body {
 	padding: 12px 8px;
 	border-radius: 10px;
 	text-decoration: none;
-	color: white;
+	color: var(--text-color) !important;
 
 	-webkit-transition: -webkit-transform 0.2s;
 	transition: -webkit-transform 0.2s;
 	transition: transform 0.2s;
-	transition: transform 0.2s, -webkit-transform 0.2s; 
+	transition: transform 0.2s, -webkit-transform 0.2s;
 }
 
-.invite:hover {
+.invite:hover, .invite:active {
 	background: var(--blurple-dark);
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
@@ -95,8 +198,67 @@ body {
 
 .invite a {
 	text-decoration: none;
+	color: var(--text-color) !important
 }
 
+.mobile .invite {
+	width: 80%;
+}
+
+/* ––––––––––––––––––– */
+/* Spinner from tobiasahlin.com/spinkit/ */
+/* ––––––––––––––––––– */
+
+.spinner {
+	margin: 100px auto;
+	width: 40px;
+	height: 40px;
+	position: relative;
+}
+
+.cube1, .cube2 {
+	background-color: var(--magenta);
+	width: 15px;
+	height: 15px;
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	-webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+	animation: sk-cubemove 1.8s infinite ease-in-out;
+}
+
+.cube2 {
+	background-color: var(--blue);
+	-webkit-animation-delay: -0.9s;
+	animation-delay: -0.9s;
+}
+
+@-webkit-keyframes sk-cubemove {
+	25% { -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5) }
+	50% { -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg) }
+	75% { -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5) }
+	100% { -webkit-transform: rotate(-360deg) }
+}
+
+@keyframes sk-cubemove {
+	25% { 
+		transform: translateX(42px) rotate(-90deg) scale(0.5);
+		-webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
+	} 50% { 
+		transform: translateX(42px) translateY(42px) rotate(-179deg);
+		-webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
+	} 50.1% { 
+		transform: translateX(42px) translateY(42px) rotate(-180deg);
+		-webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
+	} 75% { 
+		transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+		-webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
+	} 100% { 
+		transform: rotate(-360deg);
+		-webkit-transform: rotate(-360deg);
+	}
+}
 
 /* ––––––––––––––––––– */
 /* Animations from animista.net */
