--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body {
 	font-family: 'Open Sans', sans-serif;
 	text-align: left;
 	position: static;
-	background-color: var(--discord-gray)
+	background-color: var(--discord-gray);
+	width: 100vw;
+	height: 100vh;
 }
 
 code {
@@ -52,6 +54,10 @@ code {
 	height: 95%;
 	width: 100%;
 	text-align: center;
+}
+
+.fs {
+	height: 100%;
 }
 
 .gradient h1 {
