--- a/style.css
+++ b/style.css
@@ -190,6 +190,8 @@ img {
 	text-decoration: none;
 	color: var(--text-color) !important;
 
+	overflow: hidden;
+
 	-webkit-transition: -webkit-transform 0.2s;
 	transition: -webkit-transform 0.2s;
 	transition: transform 0.2s;
@@ -264,6 +266,49 @@ img {
 		transform: rotate(-360deg);
 		-webkit-transform: rotate(-360deg);
 	}
+}
+
+/* Shining animation */
+@keyframes shine {
+	0% {
+		transform: translateX(-100%) rotate(200deg);
+	}
+
+	100% {
+		transform: translateX(800%) rotate(200deg);
+	}
+}
+
+@keyframes delay-animation {
+	0% {
+		opacity: 0.3;
+	}
+	50% {
+		opacity: 0.3;
+	}
+	50.01% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+
+.invite::after {
+	animation: shine 2s linear infinite,
+		delay-animation 2000ms linear infinite;
+	content: '';
+	display: block;
+	width: 120px;
+	height: 175%;
+	background: rgb(255,255,255);
+	background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 75%, rgba(255,255,255,0) 100%);
+	position: absolute;
+	top: -20px;
+	left: 0;
+	/*   animation: shine 200ms linear; */
+	transform: translateX(100%) rotate(-25deg);
 }
 
 /* ––––––––––––––––––– */
