--- a/style.css
+++ b/style.css
@@ -271,6 +271,10 @@ blockquote {
 	grid-template-rows: 100%;
 }
 
+.best {
+	background-color: var(--green) !important;
+}
+
 .mobile .recent-questions {
 	grid-auto-rows: 100px;
 	grid-template-columns: repeat(1, 1fr);
@@ -281,12 +285,6 @@ blockquote {
 	background-color: var(--discord-not-quite-black);
 	border-radius: 8px;
 	margin: 3px;
-	/* display: inline-block; */
-	/* max-width: 200px; */
-	/* white-space: nowrap; */
-	/* overflow: hidden;
-	text-overflow: ellipsis; */
-	/* white-space: nowrap; */
 	overflow: hidden;
 	text-overflow: ellipsis;
 	max-height: 250px;
@@ -311,10 +309,20 @@ blockquote {
 }
 
 .question-grid {
-	display: grid;
+	display: flex;
+	flex-wrap: wrap;
+	box-sizing: border-box;
 	grid-auto-rows: 200px;
 	grid-template-columns: repeat(2, 1fr);
 	grid-template-rows: repeat(2, auto);
+}
+
+.m-hr {
+	display: none;
+}
+
+.mobile .m-hr {
+	display: block;
 }
 
 .mobile .question-grid {
@@ -325,6 +333,7 @@ blockquote {
 	background-color: var(--discord-not-quite-black);
 	border-radius: 8px;
 	margin: 3px;
+	flex-grow: 1;
 	/* height: 100%; */
 }
 
