--- a/style.css
+++ b/style.css
@@ -165,6 +165,11 @@ a:hover {
 
 .right p {
 	vertical-align: top;
+	text-align: right;
+}
+
+.mobile .right p {
+	text-align: left;
 }
 
 
@@ -506,4 +511,74 @@ blockquote {
     -webkit-transform: scale(1);
             transform: scale(1);
   }
+}
+
+.vibrate {
+	-webkit-animation: vibrate 0.3s linear infinite both;
+	animation: vibrate 0.3s linear infinite both;
+}
+
+
+@-webkit-keyframes vibrate {
+	0% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
+
+	20% {
+		-webkit-transform: translate(-2px, 2px);
+		transform: translate(-2px, 2px);
+	}
+
+	40% {
+		-webkit-transform: translate(-2px, -2px);
+		transform: translate(-2px, -2px);
+	}
+
+	60% {
+		-webkit-transform: translate(2px, 2px);
+		transform: translate(2px, 2px);
+	}
+
+	80% {
+		-webkit-transform: translate(2px, -2px);
+		transform: translate(2px, -2px);
+	}
+
+	100% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
+}
+
+@keyframes vibrate {
+	0% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
+
+	20% {
+		-webkit-transform: translate(-2px, 2px);
+		transform: translate(-2px, 2px);
+	}
+
+	40% {
+		-webkit-transform: translate(-2px, -2px);
+		transform: translate(-2px, -2px);
+	}
+
+	60% {
+		-webkit-transform: translate(2px, 2px);
+		transform: translate(2px, 2px);
+	}
+
+	80% {
+		-webkit-transform: translate(2px, -2px);
+		transform: translate(2px, -2px);
+	}
+
+	100% {
+		-webkit-transform: translate(0);
+		transform: translate(0);
+	}
 }
