--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
 
 :root {
 	--magenta: #ED47FF;
+	--dark-magenta: #bd2d87;
 	--blue: #70D7FF;
 	--text-color: #FFFFFF;
 	--blurple: #5865F2;
@@ -119,7 +120,8 @@ a:hover {
 
 /* ––– */
 
-.left img {
+.left img,
+.left .lefter {
 	float: left; 
 	margin-right: 10px;
 }
@@ -144,7 +146,8 @@ a:hover {
 
 /* ––– */
 
-.right img {
+.right img,
+.right .righter {
 	float: right; 
 	margin-right: 10px;
 }
@@ -360,6 +363,93 @@ blockquote {
 
 .error {
 	color: var(--red);
+}
+
+.success {
+	color: var(--green)
+}
+
+/* ––––––––––––––––––– */
+/* Supercharges        */
+/* ––––––––––––––––––– */
+.buy {
+	background: rgb(189, 45, 135);
+	background: -moz-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: -webkit-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bd2d87", endColorstr="#b191ff", GradientType=1);
+
+	padding: 10px 12px;
+	text-decoration: none;
+	border: 0;
+	border-radius: 10px;
+	color: var(--text-color);
+	font-size: 150%;
+	font-weight: bold;
+	width: 80%;
+
+	-webkit-transform: translateZ(0);
+	transform: scale(1);
+	-webkit-transition: transform 200ms;
+	transition: transform 200ms;
+}
+
+.buy:hover,
+.buy:active {
+	transform: scale(1.1)
+}
+
+.purchase-grid {
+	display: flex;
+	/* grid-template-columns: repeat(3, 1fr); */
+	grid-template-columns: repeat(autofit);
+	/* grid-auto-columns: auto; */
+	gap: 5px;
+}
+
+.purchase-grid .item {
+	border: 3px solid var(--dark-magenta);
+	border-radius: 10px;
+	margin-top: 5px;
+	height: 250px;
+	text-align: center;
+}
+
+.mobile .purchase-grid {
+	display: block;
+}
+
+.supercharge-gradient-bg {
+	background: rgb(189, 45, 135);
+	background: -moz-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: -webkit-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bd2d87", endColorstr="#b191ff", GradientType=1);
+}
+
+.supercharge-gradient-text {
+	background: rgb(189, 45, 135);
+	background: -moz-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: -webkit-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bd2d87", endColorstr="#b191ff", GradientType=1);
+
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.supercharged {
+	background-color: var(--blurple) !important;
+	color: var(--text-color) !important;
+}
+
+.supercharged a {
+	color: var(--text-color) !important;
+}
+
+.mobile .supercharge-text {
+	font-size: 65%;
 }
 /* ––––––––––––––––––– */
 /* Spinner from tobiasahlin.com/spinkit/ */
