--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
 	--orange: #F06543;
 	--red: #F02D3A;
 	--green: #17B890;
+	--footer-text: #696969;
 }
 
 
@@ -118,6 +119,40 @@ a:hover {
 	text-decoration: underline;
 }
 
+footer {
+	background-color: var(--discord-not-quite-black) !important;
+	border-radius: 10px 10px 0px 0px;
+	color: var(--footer-text)
+}
+
+.footer-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-auto-rows: 1fr;
+	gap: 0px 0px;
+	grid-auto-flow: row;
+	justify-content: stretch;
+	align-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.footer-1 {
+	grid-area: 1 / 1 / 2 / 2;
+}
+
+.footer-2 {
+	grid-area: 1 / 2 / 2 / 3;
+}
+
+.footer-3 {
+	grid-area: 1 / 3 / 2 / 4;
+}
+
+footer a {
+	color: var(--footer-text);
+}
+
 /* ––– */
 
 .left img,
@@ -174,7 +209,6 @@ a:hover {
 .mobile .right p {
 	text-align: left;
 }
-
 
 /* ––– */
 
@@ -372,6 +406,12 @@ blockquote {
 /* ––––––––––––––––––– */
 /* Supercharges        */
 /* ––––––––––––––––––– */
+
+tbody {
+	vertical-align: middle;
+	text-align: center;
+}
+
 .buy {
 	background: rgb(189, 45, 135);
 	background: -moz-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
@@ -400,11 +440,11 @@ blockquote {
 }
 
 .purchase-grid {
-	display: flex;
-	/* grid-template-columns: repeat(3, 1fr); */
-	grid-template-columns: repeat(autofit);
-	/* grid-auto-columns: auto; */
-	gap: 5px;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: 0;
+	grid-column-gap: 5px;
+	grid-row-gap: 0px;
 }
 
 .purchase-grid .item {
@@ -437,6 +477,23 @@ blockquote {
 	-webkit-background-clip: text;
 	background-clip: text;
 	-webkit-text-fill-color: transparent;
+}
+
+.supercharge-gradient-link {
+	background: rgb(189, 45, 135);
+	background: -moz-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: -webkit-linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	background: linear-gradient(143deg, rgba(189, 45, 135, 1) 0%, rgba(214, 100, 190, 1) 33%, rgba(223, 153, 240, 1) 66%, rgba(177, 145, 255, 1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#bd2d87", endColorstr="#b191ff", GradientType=1);
+
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.supercharge-gradient-link:hover {
+	text-decoration: underline;
+	text-decoration-color: var(--dark-magenta);
 }
 
 .supercharged {
